src/scss/bootstrap.scss
/*
 * Copyright (C) 2021 SUSE, LLC.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 */
@use './defaults/colors' as dc;
@use './defaults/fonts' as df;
@use './defaults/variables' as dv;

// Customize Bootstrap variables to customize the theme to our needs.
$primary: dc.$s3gw-color-theme-primary !default;
$secondary: dc.$s3gw-color-theme-secondary !default;
$success: dc.$s3gw-color-success !default;
$info: dc.$s3gw-color-info !default;
$warning: dc.$s3gw-color-warning !default;
$danger: dc.$s3gw-color-danger !default;
$card-bg: dc.$s3gw-color-cultured;

$h1-font-size: 2em !default;
$h2-font-size: 1.75em !default;
$h3-font-size: 1.5em !default;
$h4-font-size: 1.3em !default;
$h5-font-size: 1.15em !default;
$h6-font-size: 1em !default;

$font-family-sans-serif: df.$s3gw-font-family-sans-serif !default;
$font-family-monospace: df.$s3gw-font-family-monospace !default;
$headings-font-family: df.$s3gw-font-family-headings !default;
$component-active-color: dc.$s3gw-color-white;
$component-active-bg: dc.$s3gw-color-theme-primary;
$badge-border-radius: 1.25rem;
$border-color: dc.$s3gw-color-border;
$table-hover-bg: dc.$s3gw-color-table-hover-background;
$table-th-font-weight: normal;
$pagination-font-size: 0.875rem;
$pagination-padding-y: 0.187rem;
$pagination-padding-x: 0.5rem;
$placeholder-opacity-min: 0.1;
$placeholder-opacity-max: 0.2;

@import '~bootstrap/scss/bootstrap';

//////////////////////////////////////////////////////////////////////////////
// Table
.table-light {
  --bs-table-bg: #{$table-hover-bg};
}

//////////////////////////////////////////////////////////////////////////////
// Forms
.invalid-feedback {
  // Get error messages working with Angular reactive forms.
  display: block;
}

.form-control[readonly] {
  background-color: $input-disabled-bg;
  opacity: 1;
}

.form-check > .form-check-input {
  cursor: pointer;

  & ~ .form-check-label {
    cursor: pointer;
  }
}

//////////////////////////////////////////////////////////////////////////////
// Badge
.badge-outline {
  &.success {
    color: $success;
    border-color: $success;
  }

  &.info {
    color: $info;
    border-color: $info;
  }

  &.warning {
    color: $warning;
    border-color: $warning;
  }

  &.danger {
    color: $danger;
    border-color: $danger;
  }

  &.success,
  &.info,
  &.warning,
  &.danger {
    background: transparent;
    border: 1px solid;
  }
}

//////////////////////////////////////////////////////////////////////////////
// Button
button:disabled,
[type='button']:disabled {
  cursor: not-allowed;
}

.btn-simple {
  @include button-variant(
    // background
    dc.$s3gw-color-transparent,
    // border
    dc.$s3gw-color-transparent,
    // color
    dc.$s3gw-color-black,
    // hover-background
    dc.$s3gw-color-cyan-blue-azure,
    // hover-border
    dc.$s3gw-color-cyan-blue-azure,
    // hover-color
    dc.$s3gw-color-white,
    // active-background
    dc.$s3gw-color-cyan-blue-azure,
    // active-border
    dc.$s3gw-color-cyan-blue-azure,
    // active-color
    dc.$s3gw-color-white,
    // disabled-background
    dc.$s3gw-color-gray-x11,
    // disabled-border
    dc.$s3gw-color-gray-x11
  );

  --bs-btn-focus-box-shadow: none;
}

.btn-primary {
  @include button-variant(
    // background
    $primary,
    // border
    $primary,
    // color
    dc.$s3gw-color-white,
    // hover-background
    dc.$s3gw-color-cyan-blue-azure,
    // hover-border
    dc.$s3gw-color-cyan-blue-azure,
    // hover-color
    dc.$s3gw-color-white,
    // active-background
    dc.$s3gw-color-cyan-blue-azure,
    // active-border
    dc.$s3gw-color-cyan-blue-azure,
    // active-color
    dc.$s3gw-color-white,
    // disabled-background
    dc.$s3gw-color-gray-x11,
    // disabled-border
    dc.$s3gw-color-gray-x11
  );
}

.btn-outline-primary {
  @include button-outline-variant(
    // color
    $primary,
    // color-hover
    dc.$s3gw-color-black,
    // active-background
    dc.$s3gw-color-cyan-blue-azure,
    // active-border
    dc.$s3gw-color-cyan-blue-azure,
    // active-color
    dc.$s3gw-color-white
  );

  --bs-btn-hover-bg: #{dc.$s3gw-color-white};
}

.btn-submit {
  @extend .btn-primary;
}

.btn-input-group {
  @extend .btn-outline-secondary;
}

.btn-warning,
.btn-danger {
  color: dc.$s3gw-color-white !important;
}

//////////////////////////////////////////////////////////////////////////////
// Links
a {
  &:focus,
  &.focus {
    outline: 0;
  }
}

//////////////////////////////////////////////////////////////////////////////
// Lists
li {
  &:focus,
  &.focus {
    outline: 0;
  }
}

//////////////////////////////////////////////////////////////////////////////
// Progress
.progress {
  .indeterminate {
    animation: progress-loading 2s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
  }
}

@keyframes progress-loading {
  0%,
  100% {
    transition-timing-function: cubic-bezier(1, 0, 0.65, 0.85);
  }

  0% {
    width: 0;
  }

  100% {
    width: 100%;
  }
}

//////////////////////////////////////////////////////////////////////////////
// Vertical rule
.vr {
  display: inline-block;
  align-self: stretch;
  width: 1px;
  min-height: 1em;
  opacity: 0.25;
}

//////////////////////////////////////////////////////////////////////////////
// Material Design Icons - https://materialdesignicons.com/bootstrap
/* stylelint-disable no-descending-specificity */
.mdi::before {
  font-size: 24px;
  line-height: 14px;
  position: relative;
  top: 3px;
}

.btn .mdi::before {
}

.btn-xs .mdi::before {
  font-size: 18px;
}

.btn-sm .mdi::before {
  font-size: 18px;
}

.dropdown-menu .mdi {
  width: 18px;
}

.dropdown-menu .mdi::before {
  position: relative;
  left: -8px;
}

.nav .mdi::before {
}

.navbar .navbar-toggle .mdi::before {
  position: relative;
  color: dc.$s3gw-color-white;
}

.breadcrumb .mdi::before {
}

.breadcrumb a:hover {
  text-decoration: none;
}

.breadcrumb a:hover span {
  text-decoration: underline;
}

.alert .mdi::before {
  margin-right: 2px;
}

.input-group-addon .mdi::before {
}

.navbar-brand .mdi::before {
  margin-right: 2px;
}

.list-group-item .mdi::before {
  left: -3px;
}
/* stylelint-enable no-descending-specificity */

